TemplateCodeChallenge_Vs01.yml
#CloudFormation using YAML

AWSTemplateFormatVersion: '2010-09-09'
Description: 'Create an EC2 instance with a public IP address and web server'
Resources:
  #Create VPC
  MyVpc:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: '10.0.0.0/16'
      Tags:
        - Key: Name
          Value: my-vpc      
  #Create Internet Gateway
  MyInternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: my-internet-gateway
  #Attach  MyInternetGateway    
  MyVpcGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref MyVpc
      InternetGatewayId: !Ref MyInternetGateway
  #Create RouteTable
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVpc
      Tags:
        - Key: Name
          Value: my-public-route-table
  #Create Subnet
  MyPublicSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVpc
      CidrBlock: '10.0.0.0/24'
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: my-public-subnet
  #Create Route in PublicRouteTable
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: MyVpcGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref MyInternetGateway
  #Create SubnetRouteTableAssociation
  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref MyPublicSubnet
      RouteTableId: !Ref PublicRouteTable
  #Create SecurityGroup
  MySecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: web-server-sg
      GroupDescription: Security group for web server
      VpcId: !Ref MyVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: '0.0.0.0/0'
  #Create KeyPair
  MyKeyPair:
    Type: AWS::EC2::KeyPair
    Properties:
      KeyName: 'MyKeyPair'
      Tags:
        - Key: Name
          Value: 'MyKeyPair'
  #Create WebServerInstance
  WebServerInstance:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: ami-0c94855ba95c71c99 # Amazon Linux 2 AMI (HVM), SSD Volume Type
      InstanceType: t2.micro
      KeyName: MyKeyPair
      SecurityGroupIds: [!Ref MySecurityGroup]
      SubnetId: !Ref MyPublicSubnet
      UserData: !Base64 |
          #!/bin/bash
          yum update -y
          yum install -y httpd mod_ssl
          echo "<html><head><title>Hello World</title></head><body><h1>Hello World!</h1></body></html>" > /var/www/html/index.html
          systemctl start httpd
          systemctl enable httpd
          echo '# Redirect HTTP to HTTPS' > /etc/httpd/conf.d/redirect.conf
          echo 'RewriteEngine On' >> /etc/httpd/conf.d/redirect.conf
          echo 'RewriteCond %{HTTPS} off' >> /etc/httpd/conf.d/redirect.conf
          echo 'RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R,L]' >> /etc/httpd/conf.d/redirect.conf
      Tags:
        - Key: Name
          Value: "My EC2 Instance"
